Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-4954

URI fetcher error message if plugin is not found is mis-leading.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • containerization

    Description

      In src/uri/fetcher.cpp, if we are unable to create a plugin, we skip it but we log an erroneous misleading message:

            // NOTE: We skip the plugin if it cannot be created, instead of
            // returning an Error so that we can still use other plugins.
            LOG(ERROR) << "Failed to create URI fetcher plugin "
                       << "'"  << name << "': " << plugin.error();
      

      Ideally, it should be at best a LOG(INFO) with it clearly specifying that the relevant plugin was skipped since it was not found.

      Attachments

        Activity

          People

            yongtang Yong Tang
            anandmazumdar Anand Mazumdar
            Jie Yu Jie Yu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: