Fix the mis-leading URI fetcher error message (MESOS-4954).

This fix changes the URL fetcher error message from LOG(ERROR) to
LOG(INFO) as the plugin is actually skipped if it is not created.

Review: https://reviews.apache.org/r/44883/